--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,27 +1,30 @@
-<p id="notice"><%= notice %></p>
+<div class="container mt-5">
+    <div class="row g-2">
 
-<h1>Rooms</h1>
+        <div class="col-md-4">
+            <div class=' shadow p-md-3'>
+                <%= render 'form', room:Room.new %>
+            </div>
+            <hr/>
+            <div>
+                <h1>Rooms</h1>
+                <% @rooms.each do |room| %>
+                    <h3 class="px-3 py-2 border shadow rooms"><%= link_to room.name ,
+                        room_path(room),class:'text-decoration-none text-success' %></h3>
+                <% end %>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <% if @room.present? %>
+                <h3 class='mb-3'><%= @room.name %></h3>
+                <% @room.messages.each do |msg| %>
+                    <p><%= msg.content %></p>
+                <% end %>
+                <div class='chat-room'>
+                    <%= render 'messages/form', message: Message.new, room: @room %>
+                </div>
+            <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= room.name %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Room', new_room_path %>
+        </div>
+    </div>
+</div>
