--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: message) do |form| %>
+<%= form_with(model: message,id: 'messageForm') do |form| %>
   <% if message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -13,9 +13,9 @@
   <%= form.hidden_field :room_id, value: room.id %>
 
   <div class="input-group">
-    <%= form.text_field :content, placeholder: "Type your message here...", class: 'form-control' %>
+    <%= form.text_field :content, placeholder: "Type your message here...", class: 'form-control', id: 'messageInput' %>
     <div class="input-group-append">
-      <%= form.submit "Add Message", class: "btn btn-primary" %>
+    <%= form.submit "Add Message", class: "btn btn-primary submit", type: "submit" %>
     </div>
   </div>
 <% end %>
